--- a/src/app/components/contact-me-section/contact-me-section.html
+++ b/src/app/components/contact-me-section/contact-me-section.html
@@ -1,6 +1,31 @@
 <div class="background">
   <div id="contact-me-section" class="contact-me-section scroll-section">
-    <img src="./img/test/contact-me.png" alt="test contact-me-section">
-    <app-contact-form class="hidden"/>
+    <h3>Contact me </h3>
+    <div class="contact-me-section__inhalt">
+      <div class="contact-me-section__inhalt__text">
+        <p>Encourage people to contact you and describe what role you are interested in. Show that you will add value to their projects through your work.
+Example: Feel free to get in touch with job offers or opportunities such as: ...</p>
+      </div>
+      <div class="contact-me-section__inhalt__icon">
+        <a href="mailto:arturgroblicki@gmail.com" (click)="handleEmailClick()">
+          <div class="contact-item"
+            (mouseenter)="emailStatus = 'hover'"
+            (mouseleave)="emailStatus = 'default'"
+            >
+              <div class="email-icon" [class]="emailStatus"></div>
+              <p>arturgroblicki@gmail.com</p>
+          </div>
+        </a>
+        <a href="tel:+4915256470143" target="_blank">
+          <div class="contact-item"
+            (mouseenter)="telStatus = 'hover'"
+            (mouseleave)="telStatus = 'default'">
+            <div class="tel-icon" [class]="telStatus"></div>
+            <p [class.active]="telStatus !== 'default'">0152 564 701 43</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <app-contact-form class="background"/>
   </div>
 </div>
