Adding routers link.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,2 @@
-<app-hero-section /> <!-- hero section -->
-<app-menu-bar class="sticky" /> <!-- menu bar -> header -->
-<app-why-me-section /> <!-- why me section -->
-<app-my-skills-section /> <!-- my skills section -->
-<app-my-project-section /> <!-- my projects section -->
-<app-my-references />
-<app-contact-me-section/> <!-- contact me section -->
-<app-footer class="footer"/> <!-- footer section -->
 <router-outlet />
+<app-footer class="footer"/>
