Added link to footer for legal notice. Fix menu bar routing for legal notice.

--- a/src/app/components/legal-notice/legal-notice.html
+++ b/src/app/components/legal-notice/legal-notice.html
@@ -1,1 +1,19 @@
-<p>test</p>
+<app-menu-bar />
+<section class="legal-notice-container">
+    <h1>Legal Notice</h1>
+
+    <div class="legal-section">
+        <h2>Information according to § 5 TMG</h2>
+        <p>Artur Groblicki<br>
+        [Twoja Ulica]<br>
+        [Kod pocztowy i Miasto]</p>
+    </div>
+
+    <div class="legal-section">
+        <h2>Contact</h2>
+        <p>Phone: +49 1525 6470143<br>
+        E-mail: arturgroblicki@gmail.com</p>
+    </div>
+
+    <a routerLink="/" class="back-button">Back to Home</a>
+</section>
