--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,6 +1,6 @@
 <div class="background footer-class">
   <div class="footer-class__author">
-    <a [routerLink]="['/legal-notice']"><p>Legal notice</p></a>
+    <a [routerLink]="['/legal-notice']" target="_self" class="footer-class__link">Legal notice</a>
     <p>© Artur Groblicki 2026</p>
   </div>
   <app-my-logo class="footer-class__logo"/>
