--- a/src/app/components/menu-bar/menu-bar.scss
+++ b/src/app/components/menu-bar/menu-bar.scss
@@ -146,5 +146,13 @@
     width: 60px;
     background-color: transparent;
     display: flex;
+    justify-content: flex-end;
+    align-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
   }
 }
+
+
+
+
