--- a/src/app/components/my-skills-section/my-skills-section.html
+++ b/src/app/components/my-skills-section/my-skills-section.html
@@ -27,7 +27,7 @@
           }
           </div>
           <span>
-            Show that you are motivated to continually improve your skills, implement innovative solutions and stay abreast of new technologies.
+            Mastering React and Vue to build innovative, user-centric web experiences while staying at the forefront of modern technology.
           </span>
         </div>
       </div>
