--- a/src/app/components/my-skills-section/my-skills-section.scss
+++ b/src/app/components/my-skills-section/my-skills-section.scss
@@ -101,6 +101,7 @@ button{
 @media screen and (max-width:768px) {
   .my-skills-section{
     h2{
+      font-size: 32px;
       padding-right: 0;
       padding-bottom: 40px;
     }
@@ -184,10 +185,3 @@ button{
     }
   }
 }
-
-
-
-
-
-
-
