--- a/src/app/components/my-project-section/my-project-section.scss
+++ b/src/app/components/my-project-section/my-project-section.scss
@@ -32,7 +32,7 @@
     flex-wrap: nowrap;
     flex-direction: row;
     width: 100%;
-    gap: 32px;
+    gap: 10px;
     h3{
       font-family: 'Josefin Sans';
       font-style: normal;
@@ -40,6 +40,7 @@
       font-size: clamp(16px, 2.5vw,30px);
       line-height: 1.2;
       color: styles.$primary-color;
+      padding: 30px 10px 30px 10px;
       cursor: pointer;
       transition: color 0.5s ease-in-out;
       &:hover {
@@ -48,7 +49,6 @@
       &.active-project {
         background-color: styles.$primary-color7percent;
         color: styles.$secondary-color;
-        padding: 30px;
         border-radius: 15px 15px 0px 0px;
       }
     }
@@ -105,6 +105,14 @@
             align-items: center;
             justify-content: flex-start;
             gap: 15px;
+            p{
+              font-family: 'Josefin Sans';
+              font-style: normal;
+              font-weight: 400;
+              font-size: 18px;
+              line-height: 1.2;
+              color: styles.$secondary-color;
+            }
       }
       span{
         font-family: 'Josefin Sans';
@@ -122,6 +130,7 @@
     }
     .screenshot{
       width: 50%;
+      padding-top: 30px;
       height: -webkit-fill-available;
       display: flex;
       flex-direction: column;
@@ -180,71 +189,73 @@
         border-radius: 32px;
       }
 
-      .buttons{
-        width: 100%;
-        height: 96px;
-        bottom: 0px;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        align-content: center;
-        justify-content: center;
-        align-items: center;
-        gap: 32px;
-        &__live{
-          box-sizing: border-box;
-          display: flex;
-          flex-direction: row;
-          justify-content: center;
-          align-items: center;
-          padding: 13px 30px;
-          gap: 10px;
-          width: 134px;
-          height: 48px;
-          border: 1px solid #89BCD9;
-          border-radius: 30px;
-          flex: none;
-          order: 1;
-          flex-grow: 0;
-          font-family: 'Josefin Sans';
-          font-style: normal;
-          font-weight: 400;
-          font-size: 18px;
-          line-height: 1.2;
-          color: styles.$secondary-dark-grey;
-          background-color: styles.$primary-color;
-          transition: background-color 0.3s ease;
-          &:hover{
-            background-color: styles.$secondary-color;
-          }
-        }
-        &__git{
-          box-sizing: border-box;
-          display: flex;
-          flex-direction: row;
-          justify-content: center;
-          align-items: center;
-          padding: 13px 30px;
-          gap: 10px;
-          width: 134px;
-          height: 48px;
-          border: 1px solid styles.$primary-color;
-          border-radius: 30px;
-          flex: none;
-          order: 1;
-          flex-grow: 0;
-          font-family: 'Josefin Sans';
-          font-style: normal;
-          font-weight: 400;
-          font-size: 18px;
-          line-height: 1.2;
-          color: styles.$primary-color;
-          transition: background-color 0.3s ease;
-          &:hover{
-            background-color: styles.$secondary-light-grey;
-          }
-        }
-      }
+
+    }
+  }
+}
+
+.buttons{
+  width: 100%;
+  height: 96px;
+  bottom: 0px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+  &__live{
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 13px 30px;
+    gap: 10px;
+    width: 134px;
+    height: 48px;
+    border: 1px solid styles.$primary-color;
+    border-radius: 30px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    font-family: 'Josefin Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.2;
+    color: styles.$secondary-dark-grey;
+    background-color: styles.$primary-color;
+    transition: background-color 0.3s ease;
+    &:hover{
+      background-color: styles.$secondary-color;
+    }
+  }
+  &__git{
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 13px 30px;
+    gap: 10px;
+    width: 134px;
+    height: 48px;
+    border: 1px solid styles.$primary-color;
+    border-radius: 30px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    font-family: 'Josefin Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.2;
+    color: styles.$primary-color;
+    transition: background-color 0.3s ease;
+    &:hover{
+      background-color: styles.$secondary-light-grey;
     }
   }
 }
@@ -252,8 +263,13 @@
 @media screen and (max-width:768px) {
 
   .my-project-section{
+    padding: 40px 0px;
+    h2{
+      padding-bottom: 40px;
+      font-size: 32px;
+    }
     &__detail{
-      flex-direction: column;
+      flex-direction: column-reverse;
       &::before {
         width: 95vw;
       }
@@ -262,6 +278,14 @@
         &__description{
           span{
             height: auto;
+            font-size: 16px;
+            min-height: auto;
+          }
+        }
+        &__title{
+          h4{
+            font-size: 18px;
+            color: styles.$primary-color;
           }
         }
       }
@@ -269,9 +293,28 @@
         width: 100%;
         &__technologies{
           padding-bottom: 16px;
+          p{
+            text-align: left;
+            padding-left: 32px;
+            margin-bottom: 0px;
+          }
+
+        }
+        &__title{
+            text-align: left;
+            padding-left: 32px;
+            margin-bottom: 16px;
         }
       }
     }
   }
+}
 
+@media screen and (max-width:390px) {
+  .my-project-section__list{
+    gap:2px;
+    h3{
+      padding: 30px 2px;
+    }
+  }
 }
