--- a/src/app/components/my-project-section/my-project-section.scss
+++ b/src/app/components/my-project-section/my-project-section.scss
@@ -267,6 +267,9 @@
     }
     &__detail{
       flex-direction: column-reverse;
+      &:before {
+        width: 100%;
+      }
       .info{
         width: 100%;
         &__description{
