--- a/src/app/components/my-references/my-references.scss
+++ b/src/app/components/my-references/my-references.scss
@@ -11,7 +11,7 @@
   padding: 40px clamp(1.25rem, 8vw, 6.81rem);
   h3{
     width: 100%;
-    height: 38px;
+    height: auto;
     font-family: 'Josefin Sans';
     font-style: normal;
     font-weight: 400;
@@ -28,7 +28,7 @@
     align-content: center;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: calc(100% + 2 * clamp(1.25rem, 8vw, 6.81rem));
     gap: 16px;
   }
   &__inhalt{
@@ -38,8 +38,8 @@
     align-items: center;
     justify-content: center;
     flex-wrap: nowrap;
-    height: 400px;
-    width: calc(100% / 3 - 2* 16px);
+    height: clamp(290px, 30vw, 400px);
+    aspect-ratio: 1;
     gap: 16px;
     background-image: url("/img/projects/references/Default.png");
     background-repeat: no-repeat;
@@ -93,8 +93,15 @@
       color: styles.$secondary-color;
     }
   }
-
 }
 
+@media screen and (max-width:966px) {
 
-
+  .references{
+    &__board{
+      justify-content: flex-start;
+      overflow-y: scroll;
+      padding-left: clamp(1.25rem, 8vw, 6.81rem);
+    }
+  }
+}
