--- a/src/app/components/my-project-section/my-project-section.scss
+++ b/src/app/components/my-project-section/my-project-section.scss
@@ -322,3 +322,14 @@
     }
   }
 }
+
+@media screen and (min-width:1440.1px) {
+
+  .my-project-section{
+    &__detail{
+      &:before {
+        width: 99.5vw;
+      }
+    }
+  }
+}
