--- a/src/app/components/contact-me-section/contact-me-section.html
+++ b/src/app/components/contact-me-section/contact-me-section.html
@@ -1,10 +1,12 @@
 <div class="background">
   <div id="contact-me-section" class="contact-me-section scroll-section">
     <h3>Contact me </h3>
+    <button class="contact-me-section__arowwup" (click)="scrollToSection('hero-section', '')">
+      <img src="./img/arrow/arrow-up.png" alt="Arrow up">
+    </button>
     <div class="contact-me-section__inhalt">
       <div class="contact-me-section__inhalt__text">
-        <p>Encourage people to contact you and describe what role you are interested in. Show that you will add value to their projects through your work.
-Example: Feel free to get in touch with job offers or opportunities such as: ...</p>
+        <p>Ready to bring your ideas to life? I’m interested in web development roles where I can apply my skills in structured, high-quality coding to help your projects succeed and grow in a fast-paced environment. Feel free to get in touch with job offers or collaboration opportunities!</p>
       </div>
       <div class="contact-me-section__inhalt__icon">
         <a href="mailto:arturgroblicki@gmail.com" (click)="handleEmailClick()">
