--- a/src/app/components/contact-me-section/contact-me-section.scss
+++ b/src/app/components/contact-me-section/contact-me-section.scss
@@ -138,4 +138,49 @@
       }
     }
   }
+  &__arowwup{
+    position: absolute;
+    left: calc(100% - 38px - clamp(1.25rem, 8vw, 6.81rem));
+    top: 40px;
+    z-index: 2;
+    width: 38px;
+    height: 89px;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s ease;
+    &:hover{
+      background-color: styles.$secondary-light-grey;
+    }
+  }
+}
+
+@media screen and (max-width:768px) {
+
+  .contact-me-section{
+    padding-bottom: calc(93px + 80px + 40px);
+    h3{
+      margin-bottom: 40px;
+      font-size: 32px;
+    }
+    &__inhalt{
+      flex-direction: column-reverse;
+      margin-bottom: 32px;
+      &__text{
+        width: 100%;
+      }
+      &__icon{
+        width: 100%;
+        flex-direction: column-reverse;
+        margin-bottom: 32px;
+        gap: 16px;
+      }
+    }
+    &__arowwup{
+      top: calc(100% - 93px - 60px);
+      left: unset;
+    }
+  }
+
 }
