--- a/src/app/components/my-references/my-references.scss
+++ b/src/app/components/my-references/my-references.scss
@@ -28,6 +28,7 @@
     align-content: center;
     justify-content: center;
     align-items: center;
+    height: calc(clamp(290px, 30vw, 400px) + 10px);
     width: calc(100% + 2 * clamp(1.25rem, 8vw, 6.81rem));
     gap: 16px;
   }
@@ -100,7 +101,8 @@
   .references{
     &__board{
       justify-content: flex-start;
-      overflow-y: scroll;
+      overflow-x: scroll;
+      overflow-y: hidden;
       padding-left: clamp(1.25rem, 8vw, 6.81rem);
     }
   }
