Added service for scrolling (now function for scrolling is available for any component).

--- a/src/app/components/contact-me-section/contact-me-section.html
+++ b/src/app/components/contact-me-section/contact-me-section.html
@@ -1,7 +1,7 @@
 <div class="background">
   <div id="contact-me-section" class="contact-me-section scroll-section">
     <h3>Contact me </h3>
-    <button class="contact-me-section__arowwup" (click)="scrollToSection('hero-section', '')">
+    <button class="contact-me-section__arowwup" (click)="navService.scrollToSection('hero-section', '')">
       <img src="./img/arrow/arrow-up.png" alt="Arrow up">
     </button>
     <div class="contact-me-section__inhalt">
