--- a/src/app/components/hero-section/hero-section.html
+++ b/src/app/components/hero-section/hero-section.html
@@ -11,7 +11,7 @@
           <app-social-media-buttons class="socialBtn"/>
           <h1>Artur Groblicki</h1>
           <h2>FRONTEND DEVELOPER</h2>
-          <button class="hero-section__title--arowwdown" (click)="scrollToSection('why-me-section', 'why-me-btn')">
+          <button class="hero-section__title--arowwdown" (click)="navService.scrollToSection('why-me-section', 'why-me-btn')">
             <img src="./img/arrow/arrow-down.png" alt="Arrow down">
           </button>
     </div>
