--- a/src/app/components/menu-bar/menu-bar.html
+++ b/src/app/components/menu-bar/menu-bar.html
@@ -2,10 +2,10 @@
   <div id="menu-bar" class="menu-bar">
     <app-my-logo id="logo-menu" class="header-logo"/>
     <div id="btn-for-section" class="menu-bar__sections">
-      <button id="why-me-btn" [class.active]="activedButton === 'why-me-btn'" (click)="scrollToSection('why-me-section','why-me-btn')">Why me</button>
-      <button id="my-skills-btn" [class.active]="activedButton === 'my-skills-btn'" (click)="scrollToSection('my-skills-section','my-skills-btn')">Skills</button>
-      <button id="my-project-btn" [class.active]="activedButton === 'my-project-btn'" (click)="scrollToSection('my-project-section','my-project-btn')">Projects</button>
-      <button id="contact-me-btn" [class.active]="activedButton === 'contact-me-btn'" (click)="scrollToSection('contact-me-section','contact-me-btn')">Contact</button>
+      <button id="why-me-btn" [class.active]="activedButton === 'why-me-btn'" (click)="navService.scrollToSection('why-me-section','why-me-btn')">Why me</button>
+      <button id="my-skills-btn" [class.active]="activedButton === 'my-skills-btn'" (click)="navService.scrollToSection('my-skills-section','my-skills-btn')">Skills</button>
+      <button id="my-project-btn" [class.active]="activedButton === 'my-project-btn'" (click)="navService.scrollToSection('my-project-section','my-project-btn')">Projects</button>
+      <button id="contact-me-btn" [class.active]="activedButton === 'contact-me-btn'" (click)="navService.scrollToSection('contact-me-section','contact-me-btn')">Contact</button>
     </div>
     <div id="btn-for-language" class="menu-bar__language">
       <button id="EN-btn" [class.active]="activedLangBtn === 'EN-btn'" (click)="activLangBtn('EN-btn')" (mouseover)="handleLangHover('EN-btn')" (mouseleave)="handleLangLeave()">EN</button>
