--- a/src/app/components/social-media-buttons/social-media-buttons.html
+++ b/src/app/components/social-media-buttons/social-media-buttons.html
@@ -5,5 +5,5 @@
   <a href={{pathToLinkedin}} target="_blank" rel="noopener">
     <button class="btn btn__linkedin"></button>
   </a>
-  <button class="btn btn__email" (click)="scrollToSection('contact-me-section','contact-me-btn')"></button>
+  <button class="btn btn__email" (click)="navService.scrollToSection('contact-me-section','contact-me-btn')"></button>
 </div>
