--- a/src/app/components/why-me-section/why-me-section.html
+++ b/src/app/components/why-me-section/why-me-section.html
@@ -27,6 +27,6 @@
       </div>
 
     </div>
-    <button (click)="scrollToSection('contact-me-section','contact-me-btn')">Let’s talk</button>
+    <button (click)="navService.scrollToSection('contact-me-section','contact-me-btn')">Let’s talk</button>
   </div>
 </div>
