--- a/src/app/components/contact-me-section/contact-me-section.scss
+++ b/src/app/components/contact-me-section/contact-me-section.scss
@@ -124,7 +124,7 @@
         }
         p {
           font-family: 'Josefin Sans', sans-serif;
-          font-size: 20px;
+          font-size: clamp(16px, 3vw,20px);
           color: styles.$secondary-color;
           transition: color 0.5s ease-in-out;
           margin: 0;
