--- a/src/app/components/my-skills-section/my-skills-section.scss
+++ b/src/app/components/my-skills-section/my-skills-section.scss
@@ -34,7 +34,7 @@
       width: 60%;
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      gap: clamp(30px, 4vw, 40px);
+      gap: clamp(20px, 4vw, 40px);
       justify-content: center;
       justify-items: center;
       align-items: start;
@@ -111,6 +111,13 @@ button{
       &__grid{
         width: 100%;
         padding-bottom: 40px;
+        grid-template-columns: repeat(3, 1fr);
+        & > *:nth-child(4n + 1):nth-last-child(2) {
+          grid-column: 3;
+        }
+        & > *:nth-child(4n + 2):last-child {
+          grid-column: 2;
+        }
       }
       &__learning{
         width: 100%;
