--- a/src/app/components/my-references/my-references.html
+++ b/src/app/components/my-references/my-references.html
@@ -8,7 +8,7 @@
               <p class="references__inhalt__name">{{item.properties.personName}}</p>
               <p class="references__inhalt__project">Project: {{item.properties.projectName}}</p>
               <span class="references__inhalt__description">{{item.properties.description}}</span>
-              <a href={{item.properties.linkedProfile}}>Linked In Profile</a>
+              <a href={{item.properties.linkedProfile}} target="_blank">Linked In Profile</a>
             </div>
           }
         } @else {
