BugFix - now work menu for mobile device in "legal-notice" and "privacy-policy".

--- a/src/app/components/privacy-policy/privacy-policy.html
+++ b/src/app/components/privacy-policy/privacy-policy.html
@@ -5,6 +5,9 @@
       <button class="back-arrow" (click)="goHome()">
         <img src="./img/arrow/arrow-back.png" alt="Back arrow">
       </button>
+      @if(isMenuOpen){
+        <app-mobile-menu class="mobile-menu" />
+      }
     }
     <h1>Privacy Policy</h1>
 
